# Report-generator-bot

./: .gitignore  README.md  main.py  pyproject.toml
utils/: llm_handler.py  report_writer.py  sheet_handler.py
